--- a/ui/src/components/GraphSection/GraphSection.less
+++ b/ui/src/components/GraphSection/GraphSection.less
@@ -11,6 +11,14 @@
   padding: 100px 0 0 160px; 
 }
 
+@media screen and (max-width: 800px) {
+  .graphs-loading {
+    padding: 10% 0 0 10%;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .graphs-wrapper {
   display: flex;
   width: @content-width;
@@ -25,6 +33,7 @@
 
 @media screen and (max-width: 915px) {
   .graphs-wrapper {
+    margin-top: 30px;
     width: 100%;
     max-width: @content-width;
     flex-wrap: wrap;
@@ -38,6 +47,7 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    min-height: 350px; 
   }
 }
