--- a/ui/src/components/Main/Overview.less
+++ b/ui/src/components/Main/Overview.less
@@ -23,6 +23,10 @@
   height: 100%;
 }
 
+.overview-image:first-of-type {
+  height: 116px;
+}
+
 .overview-body {
   width: 90%;
   max-width: 704px;
@@ -47,4 +51,52 @@
 
 .overview-content > *:first-child {
   margin-right: 25px;
+}
+
+.overview-video {
+  width: 300px; 
+  height: 188px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+#deviceVideo {
+  width: 113%;
+  margin-left: -6%;
+  margin-top: -1px;
+}
+
+@media screen and (max-width: 915px) {
+  .overview-content {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .overview-video {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .overview-image {
+    order: 1;
+  }
+
+  .overview-image:first-of-type {
+    height: 189px;
+  }
+}
+
+@media screen and (max-width: 449px) {
+  .overview-video {
+    width: 100%;
+    margin-left: 15px;
+    margin-right: 15px;
+    height: auto;
+    flex-shrink: initial;
+  }
+
+  #deviceVideo {
+    height: 110%;
+    margin-top: -4%;
+  }
 }
