--- a/ui/src/components/WelcomePane/WelcomePane.less
+++ b/ui/src/components/WelcomePane/WelcomePane.less
@@ -1,9 +1,5 @@
 @import "../../css/SiteTheme.less";
 
-:root {
-  --lh: 1.3em;
-}
-
 .welcome {  
   background-color: #000;
   background: 
@@ -17,12 +13,15 @@
   flex-wrap: wrap;
 }
 
+.welcome.compact {
+  padding: 25px 60px;
+}
+
 .welcome-wrapper {
   width: @content-width;
   margin-left: auto;
   margin-right: auto;
 }
-
 
 .welcome-content {
   display: flex;
@@ -31,6 +30,11 @@
   margin-bottom: 67px;
   margin-left: auto;
   margin-right: auto;
+  transition: .5s ease-in
+}
+
+.welcome-content.compact {
+  margin-bottom: 25px;
 }
 
 .welcome-left {
@@ -38,64 +42,19 @@
   width: 472px;
 }
 
-.welcome-left .welcome-main-title {
+.welcome-full {
+  color: @almost-white;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 3;
+}
+
+.welcome-left .welcome-main-title,
+.welcome-full .welcome-main-title {
   font-size: 30px;
   font-weight: bold;
   line-height: 41px;
-}
-
-.welcome-right  {
-  box-sizing: border-box;
-  position: relative;
-  width: 384px;
-  height: 328px;
-  border-radius: 2px;
-  border: 1px solid @brand-primary-color;
-  background-color: #FFFFFF;
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.5);
-  padding: 34px 32px 33px 33px;
-  flex-grow: 0;
-}
-
-.welcome-right-title {
-  margin: 0;
-  margin-bottom: 16px;
-  color: @almost-black;
-  font-size: 20px;
-  line-height: 23px;
-  font-weight: bold;
-  font-family: @brand-font;
-}
-
-.welcome-right-list {
-  color: @almost-black;    
-  line-height: 17px;
-}
-
-.welcome-right-list-item {
-  display: flex;
-  opacity: 0;
-  align-items: center;
-  margin-bottom: 16px;
-  transition: 2s ease;
-}
-
-.welcome-right-list-item-text {
-  margin-left: 12px;
-  font-size: 14px;
-}
-
-.welcome-right-list-item-number {
-  background-color: @bright-blue;
-  height: 24px;
-  width: 24px;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 24px;
-  flex-shrink: 0;
-  text-align: center;
-  color: #FFF;
-  border-radius: 50%;
 }
 
 .welcome-info-para {
@@ -105,12 +64,6 @@
   font-weight: 300;
 }
 
-.welcome-right-secondary-header {
-  margin: 24px 0 14px;
-  color: @almost-black;
-  font-size: 14px;
-  font-weight: bold;
-}
 
 .welcome-secondary-header {
   margin: 14px 0 4px 0;
@@ -121,23 +74,6 @@
   text-decoration: underline;
 }
 
-.welcome-right-bottom {
-  opacity: 0;
-  transition: .5s ease-in;
-}
-
-.welcome-right-bottom img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: 70px;
-}
-
-@media screen and (max-width: 350px) {
-  .welcome-right {
-    height: auto;
-  }
-}
 
 @media screen and (max-width: 915px) {
   .welcome {
@@ -158,14 +94,5 @@
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .welcome-right {
-    width: 100%;
-    max-width: 384px;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
   }
 }
