--- a/ui/src/components/ContentWrapper/ContentWrapper.less
+++ b/ui/src/components/ContentWrapper/ContentWrapper.less
@@ -6,7 +6,7 @@
   margin-right: auto;
 }
 
-@media screen and (max-width: 915px) {
+@media screen and (max-width: @content-width - 1) {
   .content-wrapper {
     width: 100%;
   }
