--- a/ui/src/components/FooterLinks/FooterLinks.less
+++ b/ui/src/components/FooterLinks/FooterLinks.less
@@ -48,7 +48,7 @@
   }
 }
 
-@media screen and (max-width: 915px) {
+@media screen and (max-width: @content-width - 1) {
   .footer-links {
     margin-bottom: 20px;
   }
