--- a/ui/src/css/sitewideStyles.less
+++ b/ui/src/css/sitewideStyles.less
@@ -4,4 +4,5 @@ body {
     margin-left: calc(100vw - 100%); // keep scroll bar from knocking content to the left when it appears
     margin-right: 0;
     font-family: @brand-font;
+    background-color: #31333F;
 }
