--- a/ui/src/components/Main/Main.less
+++ b/ui/src/components/Main/Main.less
@@ -16,13 +16,21 @@
     font-weight: bold;
     color: #282828;
     margin-top: 0;
-    margin-bottom: 32px;
+    margin-bottom: 8px;
   }
 
   & .button-wrapper {
     display: flex;
     justify-content: center;
     width: 100%;
+  }
+
+  & .next-sub {
+    max-width: 560px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 32px;
   }
 }
 
