--- a/ui/src/components/WelcomeInset/WelcomeInset.less
+++ b/ui/src/components/WelcomeInset/WelcomeInset.less
@@ -26,8 +26,8 @@
 }
 
 .device-link {
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 12px;
+  margin-bottom: 12px;
 }
 
 @media screen and (max-width: 350px) {
