ui style updates

--- a/ui/src/components/GraphSection/GraphSection.less
+++ b/ui/src/components/GraphSection/GraphSection.less
@@ -2,6 +2,11 @@
 
 .graphs {
   background-color: rgba(216,216,216,0.2);
+
+  &.info-section {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .graph {
