--- a/ui/src/components/WelcomeInset/WelcomeInset.less
+++ b/ui/src/components/WelcomeInset/WelcomeInset.less
@@ -30,6 +30,10 @@
   margin-bottom: 12px;
 }
 
+.device-button {
+  margin-bottom: 16px;
+}
+
 @media screen and (max-width: 350px) {
   .welcome-right {
     height: auto;
