--- a/ui/src/components/WelcomePane/WelcomePane.less
+++ b/ui/src/components/WelcomePane/WelcomePane.less
@@ -31,6 +31,7 @@
 .welcome-content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: @content-width;
   margin-bottom: 127px;
   margin-left: auto;
