--- a/ui/src/components/Main/Main.less
+++ b/ui/src/components/Main/Main.less
@@ -2,7 +2,35 @@
 
 .main {
   width: 100vw;
+
+  .connecting {
+    height: 420px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    background-color: rgba(216, 216, 216, 0.2);
+    position: relative;
+    
+    & h3.info-section-header {
+      display: none;
+    }
+
+    & .message {
+      color: @bright-blue;
+      width: 100%;
+      text-align: center;
+    }
+  }
 }
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+@-moz-keyframes antispin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes antispin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes antispin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
 
 // what's next section
 .next {
